--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
         <button class="navbar-toggler d-md-none" data-toggle="collapse" data-target="#sidebar-menu">
             <span class="navbar-toggler-icon"></span>
         </button>
+        <input type="text" class="form-control w-50 d-md-block d-none" placeholder="Search" />
+        <ul class="navbar-nav px-3 d-md-block d-none">
+            <li class="nav-item text-nowrap">
+                <a class="nav-link" href="#">Sign out</a>
+            </li>
+        </ul>
     </header>
 
     <section class="container-fluid">
